<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="10dp"
        android:layout_centerInParent="true"
        android:background="@color/appcolor"
        android:layout_height="match_parent">
        <EditText
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:hint="@string/enterstorenum"
            android:id="@+id/storid"
            android:gravity="center"
            android:drawableEnd="@drawable/store"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content" />




        <EditText
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:hint="@string/entername"
            android:id="@+id/retailernam"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:id="@+id/retaileremail"
            android:textColor="@color/black"
            android:hint="@string/enteremail"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:id="@+id/retailerpass"
            android:hint="@string/empty_pass"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:id="@+id/retailerrepass"
            android:hint="@string/retypepass"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:hint="@string/entermoile"
            android:gravity="center"
            android:id="@+id/retailermobile"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content" />
        <Spinner
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:padding="5dp"
            android:id="@+id/retailerspinner"

            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"></Spinner>
        <Button
            android:layout_width="match_parent"
            android:background="@color/blue"
            android:textColor="@color/white"
            android:id="@+id/registerr"
            android:textSize="@dimen/large"
            android:text="@string/signup"
            android:textStyle="bold"
            android:layout_height="wrap_content" />


    </LinearLayout>
</RelativeLayout>