<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/gradientblue2"
    android:layout_height="match_parent"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:background="@color/appcolor"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"

            android:elevation="16dp"
            android:orientation="vertical"
            android:layout_above="@+id/addphoto"
            android:layout_centerHorizontal="true"
            android:id="@+id/relativeLayout">

            <ImageView
                android:id="@+id/storeimg"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_shop"
                android:layout_centerHorizontal="true" />

            <ProgressBar
                android:id="@+id/proimage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                android:indeterminateTint="@color/blue"
                android:indeterminateTintMode="src_in"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="16dp"
                android:id="@+id/addphototxt"
                android:layout_gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/storeimg"
                android:layout_marginBottom="20dp"

                android:gravity="center"
                android:text="Add photo"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                />



        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/Active"
                android:textSize="@dimen/medium"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:textColor="@color/black"
                android:layout_height="wrap_content" />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content" />


        </LinearLayout>



        <EditText
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:hint="@string/entername"
            android:id="@+id/storernam"
            android:singleLine="true"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:singleLine="true"
            android:id="@+id/storeemail"
            android:textColor="@color/black"
            android:hint="@string/enteremail"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:singleLine="true"
            android:id="@+id/storepass"
            android:hint="@string/empty_pass"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:id="@+id/storpassretype"
            android:singleLine="true"
            android:hint="@string/retypepass"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:hint="@string/phonenumber"
            android:inputType="number"
            android:id="@+id/phonenum"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:hint="@string/delcharge"
            android:id="@+id/delchargec"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:id="@+id/choosecurrency"
            android:inputType="number"
            android:hint="@string/currency"
            android:gravity="center"
            android:padding="10dp"
            android:textSize="@dimen/medium"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content" />
        <Spinner
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:padding="5dp"
            android:id="@+id/storedistrbter"

            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"></Spinner>
        <Spinner
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:padding="5dp"
            android:id="@+id/storesubdis"

            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"></Spinner>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:background="@color/appcolor"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_marginTop="15dp"
                    android:hint="@string/opentime"
                    android:id="@+id/Optime"
                    android:inputType="none"
                    android:gravity="center"
                    android:textSize="@dimen/medium"
                    android:textColor="@color/black"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_marginTop="15dp"
                    android:id="@+id/opdeliv"
                    android:inputType="none"
                    android:hint="@string/opendelivery"
                    android:textSize="@dimen/medium"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_height="wrap_content" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_marginTop="15dp"
                    android:id="@+id/clostim"
                    android:textColor="@color/black"
                    android:hint="@string/CloseTime"
                    android:textSize="@dimen/medium"
                    android:inputType="none"
                    android:gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_marginTop="15dp"
                    android:id="@+id/clodeliv"
                    android:inputType="none"
                    android:hint="@string/closedelivery"
                    android:textSize="@dimen/medium"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>


        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:hint="@string/deliverytime"
            android:id="@+id/delverytime"
            android:gravity="center"
            android:textSize="@dimen/medium"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:hint="@string/storedescription"
            android:id="@+id/description"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:hint="@string/address"
            android:id="@+id/addresss"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content" />


        <Button
            android:layout_width="match_parent"
            android:background="@color/blue"
            android:textColor="@color/white"
            android:id="@+id/nextstep"
            android:textSize="@dimen/large"
            android:text="@string/next"
            android:textStyle="bold"
            android:layout_height="wrap_content" />


    </LinearLayout>
</ScrollView>