<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Sign_Up">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/gradientblue2"
            android:layout_weight="1"

            >

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/appcolor"
            android:layout_weight="1"

            ></RelativeLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingTop="50dp"
        android:layout_centerInParent="true"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:text="@string/havestore"
            android:id="@+id/havestore"
            android:padding="10dp"
            android:layout_marginBottom="6dp"
            android:textSize="20sp"
            android:fontFamily="serif"


            android:layout_marginTop="5dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:gravity="center"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:background="@drawable/rowshape"

            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginEnd="40dp"
            android:visibility="gone"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center"
            android:id="@+id/storenum"

            android:layout_marginStart="40dp"
            android:gravity="center"
            android:layout_height="wrap_content">
        <EditText
            android:layout_width="0dp"
            android:layout_weight="3"
            android:gravity="center"
            android:hint="@string/enterstorenum"
            android:textColor="@color/black"
            android:drawableEnd="@drawable/store"
            android:padding="10dp"


            android:layout_height="wrap_content" />
            <TextView
                android:layout_width="0dp"
                android:background="@color/blue"
                android:textColor="@color/white"
                android:text="@string/done"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="@dimen/medium"
                android:layout_weight="1"
                android:layout_height="match_parent" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:text="@string/newstore"
            android:textColor="@color/white"
            android:id="@+id/newstoree"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:fontFamily="serif"
            android:textStyle="bold"
            android:padding="10dp"
            android:background="@drawable/gradientblue2"
            android:textSize="@dimen/medium"
            android:gravity="center"
            android:layout_height="wrap_content" />



    </LinearLayout>


</RelativeLayout>
